# GLCM

./: CMakeCache.txt  CMakeLists.txt  GLCM.cpp  GLCM.h  Makefile  cmake_install.cmake  main.cpp  opencapi  opencapi.cbp
